force-app/main/default/objects/Account/fields/braseg_investimentos__c.field-meta.xml
<CustomField>
    <fullName>braseg_investimentos__c</fullName>
    <label>Investimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&apos;&apos;</fullName>
            </value>
            <value>
                <fullName>01 - ATE R$ 1.000,00</fullName>
            </value>
            <value>
                <fullName>02 - ATE R$ 5.000,00</fullName>
            </value>
            <value>
                <fullName>03 - ATE R$ 10.000,00</fullName>
            </value>
            <value>
                <fullName>04 - ATE R$ 20.000,00</fullName>
            </value>
            <value>
                <fullName>05 - ATE R$ 30.000,00</fullName>
            </value>
            <value>
                <fullName>06 - ATE R$ 40.000,00</fullName>
            </value>
            <value>
                <fullName>07 - ATE R$ 50.000,00</fullName>
            </value>
            <value>
                <fullName>07.1 - ATE R$ 80.000,00</fullName>
            </value>
            <value>
                <fullName>08 - ATE R$ 100.000,00</fullName>
            </value>
            <value>
                <fullName>08.1 - ATE R$ 130.000,00</fullName>
            </value>
            <value>
                <fullName>09 - ATE R$ 500.000,00</fullName>
            </value>
            <value>
                <fullName>10 - ATE R$ 1.000.000,00</fullName>
            </value>
            <value>
                <fullName>11 - ATE R$ 2.000.000,00</fullName>
            </value>
            <value>
                <fullName>12 - ATE R$ 3.000.000,00</fullName>
            </value>
            <value>
                <fullName>13 - ATE R$ 4.000.000,00</fullName>
            </value>
            <value>
                <fullName>14 - ATE R$ 5.000.000,00</fullName>
            </value>
            <value>
                <fullName>15 - ACIMA DE R$ 5.000.000,00</fullName>
            </value>
            <value>
                <fullName>99 - SEM INVESTIMENTO</fullName>
            </value>
            <value>
                <fullName>08.1 - ATE R$ 150.000,00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>