force-app/main/default/objects/Account/fields/braseg_matr_prevarcor__c.field-meta.xml
<CustomField>
    <fullName>braseg_matr_prevarcor__c</fullName>
    <externalId>true</externalId>
    <label>Matricula Prev Arcor</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>