force-app/main/default/objects/Account/fields/braseg_matriz__c.field-meta.xml
<CustomField>
    <fullName>braseg_matriz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matriz</label>
    <type>Checkbox</type>
</CustomField>