force-app/main/default/objects/Account/fields/braseg_nm_fantasia__c.field-meta.xml
<CustomField>
    <fullName>braseg_nm_fantasia__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome Fantasia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>