force-app/main/default/objects/Account/fields/braseg_nome_agencia__c.field-meta.xml
<CustomField>
    <fullName>braseg_nome_agencia__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome da Agência</label>
    <length>100</length>
    <type>Text</type>
</CustomField>