force-app/main/default/objects/Account/fields/braseg_Nome_da_Empresa__c.field-meta.xml
<CustomField>
    <fullName>braseg_Nome_da_Empresa__c</fullName>
    <label>Nome da Empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bradesco</fullName>
            </value>
            <value>
                <fullName>Bradesco Seguros</fullName>
            </value>
            <value>
                <fullName>2B CAPITAL S.A.</fullName>
            </value>
            <value>
                <fullName>ADC BRADESCO-ASSOC.DESPOR</fullName>
            </value>
            <value>
                <fullName>AGORA COR.TIT.VLS.MOB.SA</fullName>
            </value>
            <value>
                <fullName>ATLANTICA HOSP. PART. S.A</fullName>
            </value>
            <value>
                <fullName>BANCO BRADESCARD S.A.</fullName>
            </value>
            <value>
                <fullName>BANCO BRADESCO BBI S.A.</fullName>
            </value>
            <value>
                <fullName>BANCO BRADESCO S.A.</fullName>
            </value>
            <value>
                <fullName>BANCO LOSANGO S.A.</fullName>
            </value>
            <value>
                <fullName>BCO. BRADESCO FINANC.S/A.</fullName>
            </value>
            <value>
                <fullName>BF PROMOT.DE VENDAS LTDA.</fullName>
            </value>
            <value>
                <fullName>BITZ SERVICOS FINANCEIROS</fullName>
            </value>
            <value>
                <fullName>BRAD. AUTO RE CIA.SEGUROS</fullName>
            </value>
            <value>
                <fullName>BRADESCO ADM.CONSORCIOS L</fullName>
            </value>
            <value>
                <fullName>BRADESCO CAPITALIZACAO</fullName>
            </value>
            <value>
                <fullName>BRADESCO S.A. CTVM</fullName>
            </value>
            <value>
                <fullName>BRADESCO SAUDE OP. PLANOS</fullName>
            </value>
            <value>
                <fullName>BRADESCO SAUDE S.A.</fullName>
            </value>
            <value>
                <fullName>BRADESCO SEGUROS S.A.</fullName>
            </value>
            <value>
                <fullName>BRADESCO VIDA E PREV.S.A.</fullName>
            </value>
            <value>
                <fullName>BRADESCOR COR.SEGS. LTDA.</fullName>
            </value>
            <value>
                <fullName>BRADESPAR S.A.</fullName>
            </value>
            <value>
                <fullName>BRADSEG PARTICIPACOES S.A</fullName>
            </value>
            <value>
                <fullName>BRAM BRADESCO ASSET MANAG</fullName>
            </value>
            <value>
                <fullName>BSP AFFINITY LTDA.</fullName>
            </value>
            <value>
                <fullName>BSP EMPREEND.IMOBIL. S.A.</fullName>
            </value>
            <value>
                <fullName>CIDADE DE DEUS CIAL.PART.</fullName>
            </value>
            <value>
                <fullName>FIMADEN</fullName>
            </value>
            <value>
                <fullName>FUNDACAO BRADESCO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>