force-app/main/default/objects/Account/fields/braseg_nome_do_cliente__c.field-meta.xml
<CustomField>
    <fullName>braseg_nome_do_cliente__c</fullName>
    <formula>LEFT(Name, FIND(&quot; &quot;, Name) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Cliente</label>
    <type>Text</type>
</CustomField>