force-app/main/default/objects/Account/fields/braseg_nome_master__c.field-meta.xml
<CustomField>
    <fullName>braseg_nome_master__c</fullName>
    <formula>IF(
    AND(
        $Profile.Name = &apos;Corretor Master&apos;, 
        RecordType.DeveloperName = &apos;PersonAccount&apos;
    ),
                HYPERLINK(&apos;/oportunidadesdevendasmaster/&apos; + Id, FirstName, Id),
                IF(
                    AND(
            $Profile.Name = &apos;Corretor Master&apos;, 
            RecordType.DeveloperName = &apos;IndustriesBusiness&apos;,
                                                NOT(ISBLANK(LEFT(Name, FIND(&quot; &quot;, Name) - 1)))   
        ),
                                HYPERLINK(&apos;/oportunidadesdevendasmaster/&apos; + Id, LEFT(Name, FIND(&quot; &quot;, Name) - 1), Id),
                                HYPERLINK(&apos;/frontcomercial/s/account/&apos; + Id, Name, Id)
    )
)</formula>
    <label>Nome</label>
    <type>Text</type>
</CustomField>