force-app/main/default/objects/Account/fields/braseg_nr_contrato__c.field-meta.xml
<CustomField>
    <fullName>braseg_nr_contrato__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Número de Contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>