force-app/main/default/objects/Account/fields/braseg_numero_logradouro__c.field-meta.xml
<CustomField>
    <fullName>braseg_numero_logradouro__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Numero Logradouro</label>
    <length>10</length>
    <type>Text</type>
</CustomField>