force-app/main/default/objects/Account/fields/BRASEG_ObsCliente__c.field-meta.xml
<CustomField>
    <fullName>BRASEG_ObsCliente__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Observação do Cliente</label>
    <type>TextArea</type>
</CustomField>