force-app/main/default/objects/Account/fields/braseg_percent_tomado__c.field-meta.xml
<CustomField>
    <fullName>braseg_percent_tomado__c</fullName>
    <label>Percentual Tomado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&apos;&apos;</fullName>
            </value>
            <value>
                <fullName>ENTRE 1% E 25%</fullName>
            </value>
            <value>
                <fullName>ENTRE 26% E 50%</fullName>
            </value>
            <value>
                <fullName>ENTRE 51% E 75%</fullName>
            </value>
            <value>
                <fullName>ENTRE 75% E 99%</fullName>
            </value>
            <value>
                <fullName>TOTALMENTE BRADESC</fullName>
            </value>
            <value>
                <fullName>TOTALMENTE MERCADO</fullName>
            </value>
            <value>
                <fullName>TOTALMENTE BRADESCO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>