force-app/main/default/objects/Account/fields/braseg_porte_empesa__c.field-meta.xml
<CustomField>
    <fullName>braseg_porte_empesa__c</fullName>
    <label>Porte da Empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NULL</fullName>
            </value>
            <value>
                <fullName>Grande</fullName>
            </value>
            <value>
                <fullName>Média</fullName>
            </value>
            <value>
                <fullName>Micro</fullName>
            </value>
            <value>
                <fullName>Pequena</fullName>
            </value>
            <value>
                <fullName>&apos;&apos;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>