force-app/main/default/objects/Account/fields/braseg_possui_filiais__c.field-meta.xml
<CustomField>
    <fullName>braseg_possui_filiais__c</fullName>
    <formula>braseg_qtd_filiais__c &gt;= 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Possui Filiais</label>
    <type>Checkbox</type>
</CustomField>