force-app/main/default/objects/Account/fields/braseg_prob_funcionamento__c.field-meta.xml
<CustomField>
    <fullName>braseg_prob_funcionamento__c</fullName>
    <label>Probabilidade de Funcionamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NULL</fullName>
            </value>
            <value>
                <fullName>BAIXA</fullName>
            </value>
            <value>
                <fullName>MÉDIA</fullName>
            </value>
            <value>
                <fullName>ALTA</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>