force-app/main/default/objects/Account/fields/braseg_qtd_filiais__c.field-meta.xml
<CustomField>
    <fullName>braseg_qtd_filiais__c</fullName>
    <label>Quantidade Filiais</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>