force-app/main/default/objects/Account/fields/braseg_ramo_secundario__c.field-meta.xml
<CustomField>
    <fullName>braseg_ramo_secundario__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ramo de Atividade Secundária</label>
    <length>255</length>
    <type>Text</type>
</CustomField>