force-app/main/default/objects/Account/fields/braseg_Residencial_Funcionarios__c.field-meta.xml
<CustomField>
    <fullName>braseg_Residencial_Funcionarios__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Residencial Funcionários</label>
    <type>Checkbox</type>
</CustomField>