force-app/main/default/objects/Account/fields/braseg_resposabilidade__c.field-meta.xml
<CustomField>
    <fullName>braseg_resposabilidade__c</fullName>
    <label>Responsabilidade Financeira</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&apos;&apos;</fullName>
            </value>
            <value>
                <fullName>00 - ATE R$ 500,00</fullName>
            </value>
            <value>
                <fullName>01 - ATE R$ 1.000,00</fullName>
            </value>
            <value>
                <fullName>02 - ATE R$ 5.000,00</fullName>
            </value>
            <value>
                <fullName>03 - ATE R$ 10.000,00</fullName>
            </value>
            <value>
                <fullName>04 - ATE R$ 20.000,00</fullName>
            </value>
            <value>
                <fullName>05 - ATE R$ 30.000,00</fullName>
            </value>
            <value>
                <fullName>06 - ATE R$ 40.000,00</fullName>
            </value>
            <value>
                <fullName>07 - ATE R$ 50.000,00</fullName>
            </value>
            <value>
                <fullName>08 - ATE R$ 100.000,00</fullName>
            </value>
            <value>
                <fullName>09 - ACIMA DE R$ 100.000,00</fullName>
            </value>
            <value>
                <fullName>99 - SEM RESPONSABILIDADE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>