force-app/main/default/objects/Account/fields/braseg_simples_nacional__c.field-meta.xml
<CustomField>
    <fullName>braseg_simples_nacional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optante Simples Nacional</label>
    <type>Checkbox</type>
</CustomField>