force-app/main/default/objects/Account/fields/braseg_situacao_cadastral__c.field-meta.xml
<CustomField>
    <fullName>braseg_situacao_cadastral__c</fullName>
    <label>Situação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NULL</fullName>
            </value>
            <value>
                <fullName>ATIVA</fullName>
            </value>
            <value>
                <fullName>ATIVA - EMPRESA DOMICILIADA NO EXTERIOR</fullName>
            </value>
            <value>
                <fullName>BAIXADA</fullName>
            </value>
            <value>
                <fullName>INAPTA</fullName>
            </value>
            <value>
                <fullName>NULA</fullName>
            </value>
            <value>
                <fullName>SUSPENSA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>