force-app/main/default/objects/Account/fields/braseg_Situacao_SAP__c.field-meta.xml
<CustomField>
    <fullName>braseg_Situacao_SAP__c</fullName>
    <label>Situação do SAP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Inativo</fullName>
            </value>
            <value>
                <fullName>Afastado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>