force-app/main/default/objects/Account/fields/braseg_sobrenome_master__c.field-meta.xml
<CustomField>
    <fullName>braseg_sobrenome_master__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sobrenome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>