force-app/main/default/objects/Account/fields/braseg_Status__c.field-meta.xml
<CustomField>
    <fullName>braseg_Status__c</fullName>
    <formula>IF(ISPICKVAL(FinServ__Status__c , &apos;Ativo&apos;),&apos;Cliente Ativo&apos;,
			IF(ISPICKVAL(FinServ__Status__c , &apos;Inativo&apos;),&apos;Cliente Inativo&apos;,
					IF(ISPICKVAL(FinServ__Status__c , &apos;Prospect/Lead&apos;),&apos;Cliente Lead&apos;,&apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Cliente</label>
    <type>Text</type>
</CustomField>