force-app/main/default/objects/Account/fields/braseg_status_cpf_cnpj__c.field-meta.xml
<CustomField>
    <fullName>braseg_status_cpf_cnpj__c</fullName>
    <label>Situação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&apos;&apos;</fullName>
            </value>
            <value>
                <fullName>CANCELADA</fullName>
            </value>
            <value>
                <fullName>NULA</fullName>
            </value>
            <value>
                <fullName>PENDENTE DE REGULARIZAÇÃO</fullName>
            </value>
            <value>
                <fullName>REGULAR</fullName>
            </value>
            <value>
                <fullName>SUSPENSA</fullName>
            </value>
            <value>
                <fullName>TITULAR FALECIDO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>