force-app/main/default/objects/Account/fields/braseg_Sucursal__c.field-meta.xml
<CustomField>
    <fullName>braseg_Sucursal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sucursal</label>
    <length>30</length>
    <type>Text</type>
</CustomField>