force-app/main/default/objects/Account/fields/braseg_Supex_Matriz__c.field-meta.xml
<CustomField>
    <fullName>braseg_Supex_Matriz__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Supex Matriz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>