force-app/main/default/objects/Account/fields/braseg_tempo_relacionamento__c.field-meta.xml
<CustomField>
    <fullName>braseg_tempo_relacionamento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tempo de Relacionamento</label>
    <length>10</length>
    <type>Text</type>
</CustomField>