force-app/main/default/objects/Account/fields/braseg_tp_logradouro__c.field-meta.xml
<CustomField>
    <fullName>braseg_tp_logradouro__c</fullName>
    <label>Tipo Logradouro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 PAR</fullName>
            </value>
            <value>
                <fullName>10A TRAVES</fullName>
            </value>
            <value>
                <fullName>13 TV</fullName>
            </value>
            <value>
                <fullName>15A TV</fullName>
            </value>
            <value>
                <fullName>17 TV</fullName>
            </value>
            <value>
                <fullName>19 TV</fullName>
            </value>
            <value>
                <fullName>2ª R</fullName>
            </value>
            <value>
                <fullName>3 R</fullName>
            </value>
            <value>
                <fullName>3ª AV</fullName>
            </value>
            <value>
                <fullName>3A PAR</fullName>
            </value>
            <value>
                <fullName>3A SUB</fullName>
            </value>
            <value>
                <fullName>3A TV</fullName>
            </value>
            <value>
                <fullName>4 TV</fullName>
            </value>
            <value>
                <fullName>4 VL</fullName>
            </value>
            <value>
                <fullName>4ª R</fullName>
            </value>
            <value>
                <fullName>4A TV</fullName>
            </value>
            <value>
                <fullName>5A SUB</fullName>
            </value>
            <value>
                <fullName>6A R</fullName>
            </value>
            <value>
                <fullName>7 TV</fullName>
            </value>
            <value>
                <fullName>7ª R</fullName>
            </value>
            <value>
                <fullName>8 AV</fullName>
            </value>
            <value>
                <fullName>AL</fullName>
            </value>
            <value>
                <fullName>ANT EST</fullName>
            </value>
            <value>
                <fullName>AVENIDA CO</fullName>
            </value>
            <value>
                <fullName>BLOCO</fullName>
            </value>
            <value>
                <fullName>CAM DE SRV</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>CONDOMINIO</fullName>
            </value>
            <value>
                <fullName>CONT</fullName>
            </value>
            <value>
                <fullName>ESC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>