force-app/main/default/objects/Account/fields/braseg_uso_outros_bancos__c.field-meta.xml
<CustomField>
    <fullName>braseg_uso_outros_bancos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indicador de uso de outros bancos</label>
    <type>Checkbox</type>
</CustomField>