force-app/main/default/objects/Account/fields/FinServ__CreditRating__c.field-meta.xml
<CustomField>
    <fullName>FinServ__CreditRating__c</fullName>
    <label>Credit Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NULL</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
            <value>
                <fullName>HH</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
                <isActive>false</isActive>
                <label>Excellent</label>
            </value>
            <value>
                <fullName>Fair</fullName>
                <isActive>false</isActive>
                <label>Fair</label>
            </value>
            <value>
                <fullName>Good</fullName>
                <isActive>false</isActive>
                <label>Good</label>
            </value>
            <value>
                <fullName>Poor</fullName>
                <isActive>false</isActive>
                <label>Poor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>