force-app/main/default/objects/Account/fields/FinServ__CustomerSegment__c.field-meta.xml
<CustomField>
    <fullName>FinServ__CustomerSegment__c</fullName>
    <label>Customer Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Classic</fullName>
            </value>
            <value>
                <fullName>Correntista Inativo</fullName>
            </value>
            <value>
                <fullName>Exclusive</fullName>
            </value>
            <value>
                <fullName>Não-correntista</fullName>
            </value>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Private PF</fullName>
            </value>
            <value>
                <fullName>Top Tier</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Corporate One</fullName>
            </value>
            <value>
                <fullName>Empresas e Negócios</fullName>
            </value>
            <value>
                <fullName>Large Corporate</fullName>
            </value>
            <value>
                <fullName>Não Segmentado</fullName>
            </value>
            <value>
                <fullName>Sem Descricao</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>