force-app/main/default/objects/Account/fields/FinServ__KYCDate__c.field-meta.xml
<CustomField>
    <fullName>FinServ__KYCDate__c</fullName>
    <description>Date when the KYC compliance program was completed for a person</description>
    <encryptionScheme>None</encryptionScheme>
    <label>KYC Date</label>
    <type>Date</type>
</CustomField>