force-app/main/default/objects/Account/fields/FinServ__Status__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Inativo</fullName>
            </value>
            <value>
                <fullName>Prospect/Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>