force-app/main/default/objects/Account/recordTypes/BRASEG_Parceiro.recordType-meta.xml
<RecordType>
    <fullName>BRASEG_Parceiro</fullName>
    <active>true</active>
    <label>Parceiro</label>
</RecordType>